# Big2VisionAgent-claude

./: .gitignore  CLAUDE.md  README.md  adopt_and_continue.py  alpha_big2_wrapper.py  analyze_online.py  auto_tag_runs.py  capture_scores.py  cardaware_wrapper.py  heuristic_wrapper.py  overnight_campaign.py  play.sh  play_and_parse.sh  play_cardaware.sh  play_cardaware_ismcts.sh  play_cardaware_v2.sh  play_heuristic.sh  pyproject.toml  queue_postaction_then_base.sh  queue_v4pbv_base.sh  resume_ab2.sh  run_ab3_m3p1_online.sh  run_autoplay.command  run_awbc_ab2_online.sh  run_deanchor_online.sh  run_online_leg.py  run_scale_online.sh  run_scale_online_300.sh  run_scale_online_9.sh  run_scale_online_finish.sh  run_search_ab_online.sh  run_strongest_online.sh  run_v5_iter9_retest.sh
dashboard/: game_dashboard.py
src/big2_vision_agent/: __init__.py  action_executor.py  agent_runtime.py  agent_schema.py  config.py  dashboard_writer.py  main.py  ml_state.py  network_parser.py  packet_state.py
src/big2_vision_agent/browser/: actions.py  inspector.py  selectors.py  session.py
tests/: test_action_executor.py  test_agent_runtime.py  test_config.py  test_ml_state.py  test_network_parser.py  test_packet_state.py
